correct horizontal scrolling and img scaling

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,7 +4,7 @@
 
 .btn {
   /* text-align: left; */
-  width: 100%;
+  width: 100vw;
   padding: 5;
   margin: 0;
   border-radius: 0;
