--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ code {
 }
 
 #root {
-  max-width: 100%;
+  width: 100vw;
   height: 100vh;
   background-color: #343a40!important;
 }
